Fixed the menus by setting the minimum page width and decreasing the spacing between menu items.

--- a/wordpress/wp-content/themes/wwlln/css/style-desktop.css
+++ b/wordpress/wp-content/themes/wwlln/css/style-desktop.css
@@ -12,7 +12,7 @@
 
 	body
 	{
-		min-width: 800px;
+		min-width: 1000px;
 	}
 
 	section:last-child
@@ -109,7 +109,7 @@
 				color: #fff;
 				text-decoration: none;
 				font-size: 1.4em;
-				margin-left: 60px;
+				margin-left: 20px;
 				outline: 0;
 			}
 
